At this state the app is able to do all of that is asked in the project, now I am testing the app to be sure that she do the correct operations (I'm testing on Galaxy S8+, good to be sure that the app are matching to the screen). Now I will implements the extra functionality.